# AveeOpenPlayer_1.0.34-master

./: README.md  build.gradle  settings.gradle
ColorMixer/: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/export/: ExportVideo.cpp  ExportVideo.h
app/src/main/res/drawable/: fastscroller_bar.xml  item_bg_pattern_gray.xml  item_bg_pattern_gray_a16.xml  psts_background_tab.xml  reorder_button_bg.xml  theme1_item_bg.xml  theme1_item_bg_selected.xml  theme1_progressbar.xml  theme2_item_bg.xml  theme2_item_bg_selected.xml  theme2_progressbar.xml  theme3_bg_pattern.xml  theme3_item_bg.xml  theme3_item_bg_selected.xml  theme3_progressbar.xml  theme4_item_bg.xml  theme4_item_bg_selected.xml  theme4_progressbar.xml  theme5_item_bg.xml  theme5_item_bg_selected.xml  theme5_progressbar.xml
app/src/main/res/layout/: bgreco_list_item.xml  dialog_add_link.xml  dialog_choose_playlist.xml  dialog_choose_vizcolor.xml  dialog_choose_vizstyle.xml  dialog_choose_vizstyle_element.xml  dialog_create_playlist.xml  dialog_customize_vis.xml  dialog_customize_vis_element_bar.xml  dialog_customize_vis_element_bar_xy.xml  dialog_customize_vis_element_child.xml  dialog_customize_vis_element_crgba.xml  dialog_customize_vis_element_toggle.xml  dialog_equalizer.xml  dialog_sort.xml  (+15 more)
app/src/main/res/layout-land/: main_activity.xml  media_controls.xml
glrecorder/: build.gradle  proguard-rules.pro
glrecorder/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+339 files in other folders)
